--- a/FXML/Main.fxml
+++ b/FXML/Main.fxml
@@ -7,36 +7,41 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane minHeight="-Infinity" minWidth="-Infinity" onKeyPressed="#keyPressed" prefHeight="365.0" prefWidth="619.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller">
-   <children>
-      <ImageView fitHeight="365.0" fitWidth="673.0" layoutX="-1.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../assets/Dartgroß.png" />
-         </image>
-      </ImageView>
-      <Button layoutX="40.0" layoutY="39.0" mnemonicParsing="false" onAction="#keinTreffer" prefHeight="57.0" prefWidth="271.0" text="Kein Treffer" />
-      <Button layoutX="40.0" layoutY="115.0" mnemonicParsing="false" onAction="#nurEinDartImTriple" prefHeight="57.0" prefWidth="271.0" text="Nur ein Treffer im Triple" />
-      <Button layoutX="40.0" layoutY="197.0" mnemonicParsing="false" onAction="#zweiTreffer" prefHeight="57.0" prefWidth="271.0" text="Zwei Treffer" />
-      <Button layoutX="40.0" layoutY="273.0" mnemonicParsing="false" onAction="#dreiTreffer" prefHeight="57.0" prefWidth="271.0" text="Drei Treffer" />
-      <TextField fx:id="highscore" editable="false" layoutX="337.0" layoutY="39.0" prefHeight="57.0" prefWidth="241.0" text="Highscore: 0">
-         <font>
-            <Font size="18.0" />
-         </font>
-      </TextField>
-      <TextField fx:id="score" editable="false" layoutX="337.0" layoutY="103.0" prefHeight="57.0" prefWidth="241.0" text="Score: 0">
-         <font>
-            <Font size="18.0" />
-         </font>
-      </TextField>
-      <TextField fx:id="loose" editable="false" layoutX="337.0" layoutY="167.0" prefHeight="118.0" prefWidth="241.0">
-         <font>
-            <Font size="44.0" />
-         </font>
-      </TextField>
-      <Button layoutX="337.0" layoutY="291.0" mnemonicParsing="false" onAction="#newGame" prefHeight="38.0" prefWidth="241.0" text="Neues Spiel">
-         <font>
-            <Font size="18.0" />
-         </font>
-      </Button>
-   </children>
+<AnchorPane minHeight="-Infinity" minWidth="-Infinity" onKeyPressed="#keyPressed" prefHeight="365.0" prefWidth="619.0"
+            xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller">
+   <ImageView fitHeight="365.0" fitWidth="673.0" layoutX="-1.0" pickOnBounds="true" preserveRatio="true">
+      <Image url="@../assets/Dartgroß.png"/>
+   </ImageView>
+   <Button layoutX="40.0" layoutY="39.0" mnemonicParsing="false" onAction="#keinTreffer" prefHeight="57.0"
+           prefWidth="271.0" text="Kein Treffer"/>
+   <Button layoutX="40.0" layoutY="115.0" mnemonicParsing="false" onAction="#nurEinDartImTriple" prefHeight="57.0"
+           prefWidth="271.0" text="Nur ein Treffer im Triple"/>
+   <Button layoutX="40.0" layoutY="197.0" mnemonicParsing="false" onAction="#zweiTreffer" prefHeight="57.0"
+           prefWidth="271.0" text="Zwei Treffer"/>
+   <Button layoutX="40.0" layoutY="273.0" mnemonicParsing="false" onAction="#dreiTreffer" prefHeight="57.0"
+           prefWidth="271.0" text="Drei Treffer"/>
+   <TextField fx:id="highscore" editable="false" focusTraversable="false" layoutX="337.0" layoutY="39.0"
+              prefHeight="57.0" prefWidth="241.0" text="Highscore: 0">
+      <font>
+         <Font size="18.0"/>
+      </font>
+   </TextField>
+   <TextField fx:id="score" editable="false" focusTraversable="false" layoutX="337.0" layoutY="103.0" prefHeight="57.0"
+              prefWidth="241.0" text="Score: 0">
+      <font>
+         <Font size="18.0"/>
+      </font>
+   </TextField>
+   <TextField fx:id="loose" editable="false" focusTraversable="false" layoutX="337.0" layoutY="167.0" prefHeight="118.0"
+              prefWidth="241.0">
+      <font>
+         <Font size="44.0"/>
+      </font>
+   </TextField>
+   <Button layoutX="337.0" layoutY="291.0" mnemonicParsing="false" onAction="#newGame" prefHeight="38.0"
+           prefWidth="241.0" text="Neues Spiel">
+      <font>
+         <Font size="18.0"/>
+      </font>
+   </Button>
 </AnchorPane>
