--- a/FXML/NumberPrompt.fxml
+++ b/FXML/NumberPrompt.fxml
@@ -7,24 +7,26 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="272.0" prefWidth="372.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller">
-    <children>
-        <ImageView fitHeight="308.0" fitWidth="372.0" layoutY="-33.0" pickOnBounds="true" preserveRatio="true">
-            <image>
-                <Image url="@Dartklein.png" />
-            </image>
-        </ImageView>
-        <Button fx:id="closeButton" focusTraversable="false" layoutX="293.0" layoutY="205.0" mnemonicParsing="false" onAction="#closeNumberPrompt" prefHeight="53.0" prefWidth="65.0" text="Ok" />
-        <TextField fx:id="numberPromptIn" alignment="CENTER" layoutX="91.0" layoutY="113.0" onAction="#closeNumberPrompt" prefHeight="152.0" prefWidth="190.0">
-            <font>
-                <Font size="71.0" />
-            </font>
-        </TextField>
-        <TextField alignment="CENTER" editable="false" focusTraversable="false" layoutX="6.0" layoutY="44.0" prefHeight="63.0" prefWidth="360.0" text="Anzahl an Triple-Treffern:">
-            <font>
-                <Font size="24.0" />
-            </font>
-        </TextField>
-        <TextField fx:id="error" editable="false" focusTraversable="false" layoutX="79.0" layoutY="14.0" prefHeight="25.0" prefWidth="214.0" />
-    </children>
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="272.0"
+            prefWidth="372.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="Controller">
+    <ImageView fitHeight="308.0" fitWidth="372.0" layoutY="-33.0" pickOnBounds="true" preserveRatio="true">
+        <Image url="@Dartklein.png"/>
+    </ImageView>
+    <Button fx:id="closeButton" focusTraversable="false" layoutX="293.0" layoutY="205.0" mnemonicParsing="false"
+            onAction="#closeNumberPrompt" prefHeight="53.0" prefWidth="65.0" text="Ok"/>
+    <TextField fx:id="numberPromptIn" alignment="CENTER" layoutX="91.0" layoutY="113.0" onAction="#closeNumberPrompt"
+               prefHeight="152.0" prefWidth="190.0">
+        <font>
+            <Font size="71.0"/>
+        </font>
+    </TextField>
+    <TextField alignment="CENTER" editable="false" focusTraversable="false" layoutX="6.0" layoutY="44.0"
+               prefHeight="63.0" prefWidth="360.0" text="Anzahl an Triple-Treffern:">
+        <font>
+            <Font size="24.0"/>
+        </font>
+    </TextField>
+    <TextField fx:id="error" editable="false" focusTraversable="false" layoutX="79.0" layoutY="14.0" prefHeight="25.0"
+               prefWidth="214.0"/>
 </AnchorPane>
