--- a/assets/FXML/Main.fxml
+++ b/assets/FXML/Main.fxml
@@ -7,10 +7,10 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane minHeight="-Infinity" minWidth="-Infinity" onKeyPressed="#keyPressed" prefHeight="365.0" prefWidth="619.0"
-            xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller">
+<AnchorPane xmlns:fx="http://javafx.com/fxml/1" minHeight="-Infinity" minWidth="-Infinity" onKeyPressed="#keyPressed"
+            prefHeight="365.0" prefWidth="619.0" xmlns="http://javafx.com/javafx/18" fx:controller="Controller">
    <ImageView fitHeight="365.0" fitWidth="673.0" layoutX="-1.0" pickOnBounds="true" preserveRatio="true">
-      <Image url="@Dartgroß.png"/>
+      <Image url="@../images/Dartgroß.png"/>
    </ImageView>
    <Button layoutX="40.0" layoutY="39.0" mnemonicParsing="false" onAction="#keinTreffer" prefHeight="57.0"
            prefWidth="271.0" text="Kein Treffer"/>
