--- a/assets/FXML/NumberPrompt.fxml
+++ b/assets/FXML/NumberPrompt.fxml
@@ -10,7 +10,7 @@
 <AnchorPane xmlns:fx="http://javafx.com/fxml/1" minHeight="-Infinity" minWidth="-Infinity" prefHeight="272.0"
             prefWidth="372.0" xmlns="http://javafx.com/javafx/18" fx:controller="Controller">
     <ImageView fitHeight="308.0" fitWidth="372.0" layoutY="-33.0" pickOnBounds="true" preserveRatio="true">
-        <Image url="@Dartklein.png"/>
+        <Image url="@../images/Dartklein.png"/>
     </ImageView>
     <Button fx:id="closeButton" focusTraversable="false" layoutX="293.0" layoutY="205.0" mnemonicParsing="false"
             onAction="#closeNumberPrompt" prefHeight="53.0" prefWidth="65.0" text="Ok"/>
