--- a/src/main/resources/io/github/anybuddy9001/dartstrainingsspiel/FXML/Main.fxml
+++ b/src/main/resources/io/github/anybuddy9001/dartstrainingsspiel/FXML/Main.fxml
@@ -1,48 +1,47 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.*?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
-
 <AnchorPane xmlns:fx="http://javafx.com/fxml/1" minHeight="-Infinity" minWidth="-Infinity" onKeyPressed="#keyPressed"
-            prefHeight="365.0" prefWidth="619.0" xmlns="http://javafx.com/javafx/18"
+            prefHeight="365.0"
+            prefWidth="619.0" xmlns="http://javafx.com/javafx/18"
             fx:controller="io.github.anybuddy9001.dartstrainingsspiel.Controller">
-   <ImageView fitHeight="365.0" fitWidth="673.0" layoutX="-1.0" pickOnBounds="true" preserveRatio="true">
-      <Image url="@../images/Dartgroß.png"/>
-   </ImageView>
-   <Button layoutX="40.0" layoutY="39.0" mnemonicParsing="false" onAction="#keinTreffer" prefHeight="57.0"
-           prefWidth="271.0" text="Kein Treffer"/>
-   <Button layoutX="40.0" layoutY="115.0" mnemonicParsing="false" onAction="#einTreffer" prefHeight="57.0"
-           prefWidth="271.0" text="Ein Treffer"/>
-   <Button layoutX="40.0" layoutY="197.0" mnemonicParsing="false" onAction="#zweiTreffer" prefHeight="57.0"
-           prefWidth="271.0" text="Zwei Treffer"/>
-   <Button layoutX="40.0" layoutY="273.0" mnemonicParsing="false" onAction="#dreiTreffer" prefHeight="57.0"
-           prefWidth="271.0" text="Drei Treffer"/>
-   <TextField fx:id="highscore" editable="false" focusTraversable="false" layoutX="337.0" layoutY="39.0"
-              prefHeight="57.0" prefWidth="241.0" text="Highscore: 0">
-      <font>
-         <Font size="18.0"/>
-      </font>
-   </TextField>
-   <TextField fx:id="score" editable="false" focusTraversable="false" layoutX="337.0" layoutY="103.0" prefHeight="57.0"
-              prefWidth="241.0" text="Score: 0">
-      <font>
-         <Font size="18.0"/>
-      </font>
-   </TextField>
-   <TextField fx:id="loose" editable="false" focusTraversable="false" layoutX="337.0" layoutY="167.0" prefHeight="118.0"
-              prefWidth="241.0">
-      <font>
-         <Font size="44.0"/>
-      </font>
-   </TextField>
-   <Button layoutX="337.0" layoutY="291.0" mnemonicParsing="false" onAction="#newGame" prefHeight="38.0"
-           prefWidth="241.0" text="Neues Spiel">
-      <font>
-         <Font size="18.0"/>
-      </font>
-   </Button>
+    <ImageView fitHeight="365.0" fitWidth="673.0" layoutX="-1.0" pickOnBounds="true" preserveRatio="true">
+        <Image url="@../images/Dartgross.png"/>
+    </ImageView>
+    <Button layoutX="40.0" layoutY="39.0" mnemonicParsing="false" onAction="#keinTreffer" prefHeight="57.0"
+            prefWidth="271.0" text="%mainWindow.button.noHit"/>
+    <Button layoutX="40.0" layoutY="115.0" mnemonicParsing="false" onAction="#einTreffer" prefHeight="57.0"
+            prefWidth="271.0" text="%mainWindow.button.oneHit"/>
+    <Button layoutX="40.0" layoutY="197.0" mnemonicParsing="false" onAction="#zweiTreffer" prefHeight="57.0"
+            prefWidth="271.0" text="%mainWindow.button.twoHits"/>
+    <Button layoutX="40.0" layoutY="273.0" mnemonicParsing="false" onAction="#dreiTreffer" prefHeight="57.0"
+            prefWidth="271.0" text="%mainWindow.button.threeHits"/>
+    <TextField fx:id="highscore" editable="false" focusTraversable="false" layoutX="337.0" layoutY="39.0"
+               prefHeight="57.0" prefWidth="241.0">
+        <font>
+            <Font size="18.0"/>
+        </font>
+    </TextField>
+    <TextField fx:id="score" editable="false" focusTraversable="false" layoutX="337.0" layoutY="103.0" prefHeight="57.0"
+               prefWidth="241.0">
+        <font>
+            <Font size="18.0"/>
+        </font>
+    </TextField>
+    <TextField fx:id="loose" editable="false" focusTraversable="false" layoutX="337.0" layoutY="167.0"
+               prefHeight="118.0" prefWidth="241.0">
+        <font>
+            <Font size="44.0"/>
+        </font>
+    </TextField>
+    <Button layoutX="337.0" layoutY="291.0" mnemonicParsing="false" onAction="#newGame" prefHeight="38.0"
+            prefWidth="241.0" text="%mainWindow.button.newGame">
+        <font>
+            <Font size="18.0"/>
+        </font>
+    </Button>
 </AnchorPane>
