--- a/src/main/resources/io/github/anybuddy9001/dartstrainingsspiel/FXML/Main.fxml
+++ b/src/main/resources/io/github/anybuddy9001/dartstrainingsspiel/FXML/Main.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.*?>
 <AnchorPane xmlns:fx="http://javafx.com/fxml/1" minHeight="-Infinity" minWidth="-Infinity" onKeyPressed="#keyPressed"
             prefHeight="365.0"
             prefWidth="619.0" xmlns="http://javafx.com/javafx/18"
@@ -44,4 +44,10 @@
             <Font size="18.0"/>
         </font>
     </Button>
+    <Text fill="WHITE" layoutX="460.0" layoutY="355.0" strokeType="OUTSIDE" strokeWidth="0.0" text="%version"
+          textAlignment="RIGHT" wrappingWidth="135.099609375">
+        <font>
+            <Font size="10.0"/>
+        </font>
+    </Text>
 </AnchorPane>
