--- a/src/main/resources/io/github/anybuddy9001/dartstrainingsspiel/FXML/Game.fxml
+++ b/src/main/resources/io/github/anybuddy9001/dartstrainingsspiel/FXML/Game.fxml
@@ -1,53 +1,77 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.*?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
-<AnchorPane xmlns:fx="http://javafx.com/fxml/1" minHeight="-Infinity" minWidth="-Infinity" onKeyPressed="#keyPressed"
+<BorderPane xmlns:fx="http://javafx.com/fxml/1" minHeight="-Infinity" minWidth="-Infinity" onKeyPressed="#keyPressed"
             prefHeight="365.0"
-            prefWidth="619.0" xmlns="http://javafx.com/javafx/18"
+            prefWidth="619.0" styleClass="big-anchor" stylesheets="@application.css"
+            xmlns="http://javafx.com/javafx/18"
             fx:controller="io.github.anybuddy9001.dartstrainingsspiel.GameController">
-    <ImageView fitHeight="365.0" fitWidth="673.0" layoutX="-1.0" pickOnBounds="true" preserveRatio="true">
-        <Image url="@../images/Dartgross.png"/>
-    </ImageView>
-    <Button layoutX="40.0" layoutY="39.0" mnemonicParsing="false" onAction="#keinTreffer" prefHeight="57.0"
-            prefWidth="271.0" text="%mainWindow.button.noHit"/>
-    <Button layoutX="40.0" layoutY="115.0" mnemonicParsing="false" onAction="#einTreffer" prefHeight="57.0"
-            prefWidth="271.0" text="%mainWindow.button.oneHit"/>
-    <Button layoutX="40.0" layoutY="197.0" mnemonicParsing="false" onAction="#zweiTreffer" prefHeight="57.0"
-            prefWidth="271.0" text="%mainWindow.button.twoHits"/>
-    <Button layoutX="40.0" layoutY="273.0" mnemonicParsing="false" onAction="#dreiTreffer" prefHeight="57.0"
-            prefWidth="271.0" text="%mainWindow.button.threeHits"/>
-    <TextField fx:id="highscore" editable="false" focusTraversable="false" layoutX="337.0" layoutY="39.0"
-               prefHeight="57.0" prefWidth="241.0">
-        <font>
-            <Font size="18.0"/>
-        </font>
-    </TextField>
-    <TextField fx:id="score" editable="false" focusTraversable="false" layoutX="337.0" layoutY="103.0" prefHeight="57.0"
-               prefWidth="241.0">
-        <font>
-            <Font size="18.0"/>
-        </font>
-    </TextField>
-    <TextField fx:id="loose" editable="false" focusTraversable="false" layoutX="337.0" layoutY="167.0"
-               prefHeight="118.0" prefWidth="241.0">
-        <font>
-            <Font size="44.0"/>
-        </font>
-    </TextField>
-    <Button layoutX="337.0" layoutY="291.0" mnemonicParsing="false" onAction="#newGame" prefHeight="38.0"
-            prefWidth="241.0" text="%mainWindow.button.newGame">
-        <font>
-            <Font size="18.0"/>
-        </font>
-    </Button>
-    <Text fill="WHITE" layoutX="460.0" layoutY="355.0" strokeType="OUTSIDE" strokeWidth="0.0" text="%version"
-          textAlignment="RIGHT" wrappingWidth="135.099609375">
-        <font>
-            <Font size="10.0"/>
-        </font>
-    </Text>
-</AnchorPane>
+    <center>
+        <GridPane BorderPane.alignment="CENTER">
+            <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
+            </columnConstraints>
+            <rowConstraints>
+                <RowConstraints maxHeight="361.0" minHeight="10.0" prefHeight="353.0" vgrow="SOMETIMES"/>
+            </rowConstraints>
+            <VBox alignment="CENTER" spacing="16.0">
+                <GridPane.margin>
+                    <Insets left="10.0"/>
+                </GridPane.margin>
+                <Text fx:id="timeDisplay" fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Time: 10:00"
+                      textAlignment="CENTER">
+                    <font>
+                        <Font size="28.0"/>
+                    </font>
+                </Text>
+                <Button mnemonicParsing="false" onAction="#keinTreffer" prefHeight="50.0" prefWidth="240.0"
+                        text="%mainWindow.button.noHit" textAlignment="CENTER"/>
+                <Button mnemonicParsing="false" onAction="#einTreffer" prefHeight="50.0" prefWidth="240.0"
+                        text="%mainWindow.button.oneHit"/>
+                <Button mnemonicParsing="false" onAction="#zweiTreffer" prefHeight="50.0" prefWidth="240.0"
+                        text="%mainWindow.button.twoHits"/>
+                <Button mnemonicParsing="false" onAction="#dreiTreffer" prefHeight="50.0" prefWidth="240.0"
+                        text="%mainWindow.button.threeHits"/>
+            </VBox>
+            <VBox alignment="CENTER" fillWidth="false" spacing="11.0" GridPane.columnIndex="1">
+                <GridPane.margin>
+                    <Insets right="10.0"/>
+                </GridPane.margin>
+                <TextField fx:id="highscore" editable="false" focusTraversable="false" prefHeight="45.0"
+                           prefWidth="240.0" promptText="Score:">
+                    <font>
+                        <Font size="18.0"/>
+                    </font>
+                </TextField>
+                <TextField fx:id="score" editable="false" focusTraversable="false" prefHeight="45.0" prefWidth="240.0"
+                           promptText="Highscore:">
+                    <font>
+                        <Font size="18.0"/>
+                    </font>
+                </TextField>
+                <TextField fx:id="loose" alignment="CENTER" editable="false" focusTraversable="false" prefHeight="80.0"
+                           prefWidth="240.0" promptText="Start?">
+                    <font>
+                        <Font size="32.0"/>
+                    </font>
+                </TextField>
+                <Button mnemonicParsing="false" onAction="#startStopTimer" prefHeight="38.0" prefWidth="240.0"
+                        text="%mainWindow.button.startStopTimer" textAlignment="CENTER">
+                    <font>
+                        <Font size="18.0"/>
+                    </font>
+                </Button>
+                <Button mnemonicParsing="false" onAction="#newGame" prefHeight="38.0" prefWidth="240.0"
+                        text="%mainWindow.button.newGame">
+                    <font>
+                        <Font size="18.0"/>
+                    </font>
+                </Button>
+            </VBox>
+        </GridPane>
+    </center>
+</BorderPane>
