--- a/src/main/resources/io/github/anybuddy9001/dartstrainingsspiel/FXML/NumberPrompt.fxml
+++ b/src/main/resources/io/github/anybuddy9001/dartstrainingsspiel/FXML/NumberPrompt.fxml
@@ -2,16 +2,12 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 <AnchorPane xmlns:fx="http://javafx.com/fxml/1" minHeight="-Infinity" minWidth="-Infinity" prefHeight="272.0"
-            prefWidth="372.0" xmlns="http://javafx.com/javafx/18"
+            prefWidth="372.0" snapToPixel="false" styleClass="small-anchor" stylesheets="@application.css"
+            xmlns="http://javafx.com/javafx/18"
             fx:controller="io.github.anybuddy9001.dartstrainingsspiel.GameController">
-    <ImageView fitHeight="308.0" fitWidth="372.0" layoutY="-33.0" pickOnBounds="true" preserveRatio="true">
-        <Image url="@../images/Dartklein.png"/>
-    </ImageView>
     <Button fx:id="closeButton" focusTraversable="false" layoutX="293.0" layoutY="205.0" mnemonicParsing="false"
             onAction="#closeNumberPrompt" prefHeight="53.0" prefWidth="65.0" text="Ok"/>
     <TextField fx:id="numberPromptIn" alignment="CENTER" layoutX="91.0" layoutY="113.0" onAction="#closeNumberPrompt"
