--- a/src/main/resources/io/github/anybuddy9001/dartstrainingsspiel/FXML/Launcher.fxml
+++ b/src/main/resources/io/github/anybuddy9001/dartstrainingsspiel/FXML/Launcher.fxml
@@ -37,8 +37,7 @@
     </Text>
     <TextField fx:id="durationIn" alignment="CENTER" layoutX="389.0" layoutY="207.0" maxHeight="-Infinity"
                maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onAction="#startChallengeMode"
-               prefColumnCount="1"
-               prefHeight="20.0" prefWidth="45.0" promptText="10"/>
+               prefColumnCount="1" prefHeight="20.0" prefWidth="45.0" promptText="10"/>
     <Text fill="WHITE" layoutX="440.0" layoutY="223.0" strokeType="OUTSIDE" strokeWidth="0.0" text="min"
           wrappingWidth="38.7294921875">
         <font>
@@ -47,7 +46,15 @@
     </Text>
     <Button layoutX="295.0" layoutY="234.0" mnemonicParsing="false" onAction="#startEndlessMode" prefHeight="43.0"
             prefWidth="283.0" text="%gameWindow.title.endless"/>
-    <Button cancelButton="true" layoutX="518.0" layoutY="306.0" mnemonicParsing="false" onAction="#quit" text="Quit"/>
+    <ButtonBar buttonMinWidth="0.0" layoutX="327.0" layoutY="306.0" prefHeight="24.0" prefWidth="245.0">
+        <buttons>
+            <Button mnemonicParsing="false" onAction="#openSettings" prefHeight="24.0"
+                    text="%launcherWindow.button.settings"
+                    textAlignment="CENTER"/>
+            <Button cancelButton="true" mnemonicParsing="false" onAction="#quit" prefHeight="24.0"
+                    text="%launcherWindow.button.quit" textAlignment="CENTER"/>
+        </buttons>
+    </ButtonBar>
     <Text fill="WHITE" layoutX="465.0" layoutY="355.0" strokeType="OUTSIDE" strokeWidth="0.0" text="%version"
           textAlignment="RIGHT" wrappingWidth="135.099609375">
         <font>
