--- a/src/main/resources/io/github/anybuddy9001/dartstrainingsspiel/FXML/Game.fxml
+++ b/src/main/resources/io/github/anybuddy9001/dartstrainingsspiel/FXML/Game.fxml
@@ -4,10 +4,8 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
-<BorderPane xmlns:fx="http://javafx.com/fxml/1" minHeight="-Infinity" minWidth="-Infinity" onKeyPressed="#keyPressed"
-            prefHeight="365.0"
-            prefWidth="619.0" styleClass="big-anchor" stylesheets="@application.css"
-            xmlns="http://javafx.com/javafx/19"
+<BorderPane xmlns:fx="http://javafx.com/fxml/1" onKeyPressed="#keyPressed" prefHeight="365.0" prefWidth="619.0"
+            styleClass="big-anchor" stylesheets="@application.css" xmlns="http://javafx.com/javafx/19"
             fx:controller="io.github.anybuddy9001.dartstrainingsspiel.GameController">
     <center>
         <GridPane BorderPane.alignment="CENTER">
@@ -23,8 +21,7 @@
                 <GridPane.margin>
                     <Insets left="10.0"/>
                 </GridPane.margin>
-                <Text fx:id="timerDisplay" fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Time: --:--"
-                      textAlignment="CENTER">
+                <Text fx:id="timerDisplay" fill="WHITE" text="Time: --:--" textAlignment="CENTER">
                     <font>
                         <Font size="28.0"/>
                     </font>
@@ -74,9 +71,8 @@
                     </font>
                 </Button>
             </VBox>
-            <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="%version" textAlignment="RIGHT"
-                  GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="1"
-                  GridPane.valignment="CENTER">
+            <Text fill="WHITE" text="%version" textAlignment="RIGHT" GridPane.columnIndex="1"
+                  GridPane.halignment="RIGHT" GridPane.rowIndex="1" GridPane.valignment="CENTER">
                 <font>
                     <Font size="10.0"/>
                 </font>
